Changed logo to iPiPi. Changed navbar and default body colors.

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,13 @@
+.navbar h1 {
+  color: #F4FBFF;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 0;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #000411;
 }
 
 .navbar-lewagon .navbar-collapse {
