Changed hover color on items of navbar.

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,3 +21,7 @@
 .navbar-light .navbar-nav .nav-link {
   color: $my-white;
 }
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: $my-white;
+}
