--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -2,3 +2,4 @@
 <h1>  <%= @bathroom.rating %> stars </h1>
 <h1> Latitude: <%= @bathroom.latitude %> </h1>
 <h1>Longitude: <%= @bathroom.longitude %></h1>
+<h1>enabled: <%= @bathroom.enabled %></h1>
