--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar h1 {
-  color: $my-white;
+  color: white;
   font-size: 28px;
   font-weight: bold;
   margin: 0;
@@ -7,7 +7,7 @@
 
 .navbar-lewagon {
   justify-content: space-between;
-  background: $my-black;
+  background: $my-nav-blue;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -19,9 +19,9 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: $my-white;
+  color: white;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-  color: $my-white;
+  color: white;
 }
