Added style to form and buttons.

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,7 +7,7 @@
 
 .navbar-lewagon {
   justify-content: space-between;
-  background: $my-nav-blue;
+  background: $sky-blue;
 }
 
 .navbar-lewagon .navbar-collapse {
