--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,7 @@
 // Import your components CSS files here.
-@import "body";
 @import "alert";
 @import "avatar";
+@import "body";
+@import "button";
+@import "form";
 @import "navbar";
