Changed highlight for sky blue button and added highlight blue to colors.

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,9 +2,17 @@
   background-color: $sky-blue;
   color: white;
   font-weight: bold;
+  border-radius: 27px;
 }
 
 .btn-sky-blue:hover {
   color: white;
   font-weight: bolder;
+  box-shadow: 0 0 0.1rem 0.2rem $highlight-blue;
+}
+
+.btn-sky-blue:focus {
+  color: white;
+  font-weight: bolder;
+  box-shadow: 0 0 0 0.2rem $highlight-blue;
 }
