--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,3 +11,4 @@ $light-gray: #F4F4F4;
 $my-white: rgba(25, 201, 255, 0.025);
 $my-black: #000411;
 $sky-blue: #4AC2E8;
+$highlight-blue: rgba(25, 201, 255, 0.25);
