--- a/app/assets/stylesheets/components/_location-icon.scss
+++ b/app/assets/stylesheets/components/_location-icon.scss
@@ -1,3 +1,6 @@
-.mapboxgl-ctrl-icon {
-
+.mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
+    margin: 0 10px 10px 0;
+    float: right;
+    border-radius: 50%;
+    padding: 10px;
 }
