put all elements

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -7,7 +7,20 @@
   font-size: 64px;
 }
 
+#star-icon {
+  color: #F7CF2A;
+}
+
+#marker-icon {
+  color: #C43829;
+  font-size: 24px;
+}
+
 .show-container {
   width: 700px;
   margin: 20px auto;
+}
+
+.show-container h1 {
+  font-size:20px;
 }
