--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,25 @@
-<h1>THIS IS THE ADMIN PAGE</h1>
+<h1>Hello Admin</h1>
+<style type="text/css">
+#info {
+display: block;
+position: relative;
+margin: 0px auto;
+width: 50%;
+padding: 10px;
+border: none;
+border-radius: 3px;
+font-size: 12px;
+text-align: center;
+color: #222;
+background: #fff;
+}
+</style>
+<div
+  id="admin-map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
+<pre id="info"></pre>
+<button type="button" class="btn btn-secondary" data_but="btn-xs">Create</button>
