Add zoom in / zoom out => Bathroom#Index

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,6 +1,18 @@
+
+///////////////////// POP-UP
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+
+///////////////////// CURRENT LOCATION ICON
 .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
     margin: 0 10px 10px 0;
     float: right;
-    border-radius: 50%;
+    // border-radius: 50%;
     padding: 10px;
 }
