--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -1,12 +1,12 @@
+<br>
 
-<div class="show-container">
-
-  <br>
-  <div class="back-icon">
+ <div class="back-icon">
     <%= link_to root_path do %>
       <i class="fas fa-chevron-circle-left" id = "back-icon"> </i>
     <%end%>
   </div>
+
+<div class="show-container">
 
   <br>
 
@@ -14,7 +14,11 @@
     <i class="fas fa-map-marker-alt" id = "marker-icon"></i>
     <h1><em><%= @bathroom.location %></em></h1>
     <br>
+  </div>
+
+  <div class="toilet-infos">
     <i class="fas fa-toilet" id = "toilet-icon"></i>
+    <br>
     <br>
     <% @bathroom.rating.times do %>
       <i class="fas fa-star" id = "star-icon"></i>
@@ -22,9 +26,14 @@
     <% (5 - @bathroom.rating).times do %>
       <i class="far fa-star" id = "star-icon"></i>
     <% end %>
-
     <br>
   </div>
+
+  <br>
+  <div class = "go-button">
+    <%= link_to 'GO',root_path %>
+  </div>
+
 </div>
 
 
