add features from mapa principal to mapa do admin

--- a/app/javascript/plugins/init_admin_mapbox.js.erb
+++ b/app/javascript/plugins/init_admin_mapbox.js.erb
@@ -5,27 +5,50 @@ const adminMap = () => {
 
   if (mapElement) { // only build a map if there's a div#map to inject into
     mapboxgl.accessToken = mapElement.dataset.mapboxApiKey;
+    // MAP STYLE
     const map = new mapboxgl.Map({
       container: 'admin-map',
       style: 'mapbox://styles/chausb/ck7kq4rh70q0g1io0jk2oekjb'
     });
 
+    // ADD MARKERS
     const markers = JSON.parse(mapElement.dataset.markers);
       markers.forEach((marker) => {
         new mapboxgl.Marker()
           .setLngLat([ marker.lng, marker.lat ])
           .addTo(map);
     });
+    //
+
+    // ZOOM
+    map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
+    //
+
+    // GEOLOCATE
+    map.addControl(new mapboxgl.GeolocateControl({
+      positionOptions: {
+          enableHighAccuracy: true, minZoom: 22
+      },
+      trackUserLocation: true
+    }), 'bottom-right');
+    //
+
+    // SEARCH BAR
+    var geocoder = new MapboxGeocoder({ // Initialize the geocoder
+      accessToken: mapboxgl.accessToken,
+      countries: 'br',
+      bbox: [-43.58198103399252,-23.082406097938403,-43.15107111695235,-22.86001883519016], // Set the access token
+      mapboxgl: mapboxgl, // Set the mapbox-gl instance
+      marker: true, // Do not use the default marker style
+    });
+      document.getElementById('geocoder').appendChild(geocoder.onAdd(map));   //#NEW CODE
+    //
 
     const bounds = new mapboxgl.LngLatBounds();
 
     markers.forEach(marker => bounds.extend([ marker.lng, marker.lat ]));
     map.fitBounds(bounds, { padding: 70, maxZoom: 15, duration: 500 });
-    navigator.geolocation.getCurrentPosition(function(position){
-      new mapboxgl.Marker()
-          .setLngLat([ position.coords.longitude, position.coords.latitude ])
-          .addTo(map);
-    });
+    
 
    map.on('click', function(e) {
     document.getElementById('create-button').classList.remove("hidden")
