--- a/app/assets/stylesheets/components/_admin_map.scss
+++ b/app/assets/stylesheets/components/_admin_map.scss
@@ -1,13 +1,18 @@
-#info {
-display: block;
-position: relative;
-margin: 0px auto;
-width: 50%;
-padding: 10px;
-border: none;
-border-radius: 3px;
-font-size: 12px;
-text-align: center;
-color: #222;
-background: #fff;
+#admin-map {
+    height: 82vh !important;
+    margin: 13vh 0 0 0;
 }
+
+// #info {
+// display: block;
+// position: relative;
+// margin: 0px auto;
+// width: 50%;
+// padding: 10px;
+// border: none;
+// border-radius: 3px;
+// font-size: 12px;
+// text-align: center;
+// color: #222;
+// background: #fff;
+// }
