add link to bathroom showpage in info window

--- a/app/views/bathrooms/_info_window.html.erb
+++ b/app/views/bathrooms/_info_window.html.erb
@@ -1,2 +1,5 @@
-<h2><%= bathroom.id %></h2>
+
 <p><%= bathroom.location %></p>
+<%= link_to 'GO', bathroom_path(bathroom.id), class: 'form-actions' %>
+
+
