--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -13,9 +13,11 @@ border-radius: 45px;
 display: inline-block;
 border: none;
 transition: all 0.4s ease 0s;
+text-decoration: none;
 }
 
 .form-actions:hover {
+text-decoration: none;
 color: white !important;
 text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
 -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
