--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -28,6 +28,7 @@
 // /////////////////// SEARCH BOX OUTSIDE MAP
 body { margin: 0; padding: 0; }
 #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+#admin-map { position: absolute; top: 0; bottom: 0; width: 100%; }
 
 .geocoder {
     position: absolute;
@@ -37,6 +38,10 @@ body { margin: 0; padding: 0; }
 
 #map {
     height: 82vh !important;
+    margin: 13vh 0 0 0;
+}
+
+#admin-map {
     margin: 13vh 0 0 0;
 }
 
