--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,23 @@
-<h1>Hello Admin</h1>
+<!-- <h1>Hello Admin</h1> -->
 <div id="geocoder" class="geocoder"></div>
 <div
   id="admin-map"
-  style="width: 100%;
-  height: 600px;"
+
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
-
-<div id="geocoder" class="geocoder"></div>
-<pre id="info"></pre>
-
+<div style="position: absolute; 
+                bottom: 0; 
+                width: 100%; 
+                height: 50px;
+                display: flex;
+                justify-content: center">
 <%= simple_form_for @bathroom do |f| %>
   <%= f.input :longitude, input_html: {class: "hidden"}, label: false %>
   <%= f.input :latitude, input_html: {class: "hidden"}, label: false %>
   <%= f.submit "create", class: "btn btn-primary hidden", id: "create-button" %>
 <% end %>
+</div>
+
+
+<pre id="info"></pre>
