Added bathroomn latitude and longitude to params and saved on hidden span.

--- a/app/views/bathrooms/index.html.erb
+++ b/app/views/bathrooms/index.html.erb
@@ -8,4 +8,6 @@
 
 <span class="hidden" id="lat"></span>
 <span class="hidden" id="lng"></span>
+<span class="hidden" id="bathroom-lat"><%= params[:lat] %></span>
+<span class="hidden" id="bathroom-lng"><%= params[:lng] %></span>
 <div id="geocoder" class="geocoder"></div>
