--- a/app/views/bathrooms/_info_window.html.erb
+++ b/app/views/bathrooms/_info_window.html.erb
@@ -1,5 +1,4 @@
 
 <p><%= bathroom.location %></p>
 <%= link_to 'GO', bathroom_path(bathroom.id), class: 'form-actions' %>
-
-
+<button onclick="getRoute([@bathroom.latitude, @bathroom.longitude],map)">GO</button>
