--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,8 @@
 <div id="geocoder" class="geocoder"></div>
 <div
   id="admin-map"
-
+  style="width: 100%;
+  height: 600px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
