--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -12,20 +12,19 @@
   position: relative;
   justify-content: left;
   align-items: center;
-  margin-bottom: 32px;
 }
 
 #marker-icon {
   color: #C43829;
   font-size: 24px;
-  margin-left: 15px;
   margin-right: 10px;
 }
 
 #back-icon {
   font-size: 32px;
-  color: #434340;
-  margin-left: 10px;
+  margin-left: 1vh;
+  color: black;
+  width: min-content;
 }
 
 .toilet-infos {
@@ -50,8 +49,7 @@
   height: 60px;
   justify-content: center;
   align-items: center;
-  display: inline-block;
-  margin-top: 30px;
+  display: inline-flex;
 }
 
 .go-button a {
