--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,23 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex justify-content-between">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex justify-content-between d-flex justify-content-between align-items-center">
   <%= link_to "#", class: "navbar-brand" do %>
     <h1>iPiPi</h1>
-    <h4>Hello Admin</h4>
   <% end %>
 
- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<% if user_signed_in? %>
+  <div id="hello-admin" style="position: absolute; 
+                width: 100%; 
+                display: flex;
+                justify-content: center">
+    <h4>Hello Admin</h4>
+  </div>
+<% end %>
+
+ <button class="navbar-toggler hidden" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+ </button>
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse hidden" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
