--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex justify-content-between d-flex justify-content-between align-items-center">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to "iPiPi", class: "navbar-brand" do %>
     <h1>iPiPi</h1>
   <% end %>
 
