--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -18,10 +18,15 @@
 }
 
 ///////////////////// REMOVE RADIUS FROM CURRENT POSITION
+// .mapboxgl-user-location-accuracy-circle {
+//   width: 10px !important;
+//   height: 10px !important;
+//   display: none !important;
+// }
+
 .mapboxgl-user-location-accuracy-circle {
-  width: 0 !important;
-  height: 0 !important;
-  display: none !important;
+      display: block !important;
+
 }
 
 
