--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -25,3 +25,13 @@
 .navbar-light .navbar-nav .nav-link:hover {
   color: white;
 }
+
+.nav-item {
+  font-weight: bold;
+  margin: 0;
+}
+
+.nav-link {
+  color: white;
+  margin: 0;
+}
