--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <br>
-    <%= link_to 'GO',root_path(lat: @bathroom.latitude, lng: @bathroom.longitude) %>
+    <%= link_to 'GO',root_path(lng: @bathroom.longitude, lat: @bathroom.latitude) %>
   </div>
 
 </div>
