--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -1,7 +1,7 @@
 <br>
 
  <div class="back-icon">
-    <%= link_to root_path do %>
+    <%= link_to bathrooms_path do %>
       <i class="fas fa-chevron-circle-left" id = "back-icon"> </i>
     <%end%>
   </div>
@@ -31,7 +31,7 @@
 
   <br>
   <div class = "btn go-button">
-    <%= link_to 'GO',root_path %>
+    <%= link_to 'GO', bathroom_path %>
   </div>
 
 </div>
