Added Background + Placed Button

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,3 +10,10 @@
   font-weight: bolder;
   box-shadow: 0 0 0.1rem 0.2rem $highlight-blue;
 }
+
+
+///////////// HOME BUTTON
+.home-button {
+  text-align: -webkit-center;
+  margin-top: 65vh;
+}
