--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
-  <div class="btn btn-primary">
-  <%= link_to 'Edit', bathrooms_path, :class => "btn" %>
-</div>
+  <div class="home-button">
+    <%= link_to 'Find Bathroom', bathrooms_path, :class => "btn btn-primary" %>
+  </div>
 </div>
