Added style to buttom

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
   <div class="home-button">
-    <%= link_to 'Find Bathroom', bathrooms_path, :class => "btn btn-primary" %>
+    <%= link_to 'find a bathroom', bathrooms_path, :class => "home-button2 main-btn" %>
   </div>
 </div>
