--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
 <div class="home">
+  <div class="home-txt">
+    <h3>iPiPi</h3>
+    <h1><strong>NEED A BATHROOM ?</strong></h1>
+    <p> <em>Cheirinho de sucesso</em></p>
+  </div>
   <div class="home-button">
     <%= link_to 'find a bathroom', bathrooms_path, :class => "home-button2 main-btn" %>
   </div>
