edited head description

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .home {
 height: 100%;
-    background-image: linear-gradient(#49c2e863, #49c2e800),url(https://media0.giphy.com/media/dBkr9ttKjWXrG/giphy.gif?cid=790b761…&rid=giphy.gif);
+    background-image: linear-gradient(#49c2e863, #49c2e800),url(https://media3.giphy.com/media/CIV43WsRR5Ojm/giphy.gif?cid=ecf05e47be2cb692676c821a573b3e74575fbd3b3e0ab969&rid=giphy.gif);
     position: absolute;
     width: 100%;
     background-size: cover;
