Fixed routing problem to redirect to map directions.

--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <br>
-    <%= link_to 'GO',bathroom_path(lng: @bathroom.longitude, lat: @bathroom.latitude) %>
+    <%= link_to 'GO',bathrooms_path(lng: @bathroom.longitude, lat: @bathroom.latitude) %>
   </div>
 
 </div>
