--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -32,12 +32,9 @@
     </div>
 
     <br>
-    <div class = "btn go-button">
-      <div style="margin: 0 auto;"><%= link_to 'GO',root_path %></div>
-    </div>
 
   <br>
-    <%= link_to 'GO',root_path(lng: @bathroom.longitude, lat: @bathroom.latitude) %>
+    <%= link_to 'GO',root_path(lng: @bathroom.longitude, lat: @bathroom.latitude), class: "btn go-button" %>
   </div>
 </div>
 
