Added Done page to routes

--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -1,3 +1,6 @@
 <h1> THIS IS THE DONE PAGE </h1>
 
 <h1> THX 4 USING iPiPi ;) </h1>
+
+<!--1- abrir nova aba no brwoser p/ link externo || link_to external URL -->
+<!--  2 trocar página atual para o done || JAVASCRIPT-->
