--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -1,7 +1,7 @@
 <br>
 <div class="bathroom-card">
  <div id="back-icon">
-    <%= link_to root_path do %>
+    <%= link_to bathrooms_path do %>
       <i class="fas fa-chevron-circle-left" id = "back-icon"> </i>
     <% end %>
   </div>
@@ -34,7 +34,7 @@
     <br>
 
   <br>
-    <%= link_to 'GO',root_path(lng: @bathroom.longitude, lat: @bathroom.latitude), class: "btn go-button" %>
+    <%= link_to 'GO',bathrooms_path(lng: @bathroom.longitude, lat: @bathroom.latitude), class: "btn go-button" %>
   </div>
 </div>
 
