just commented out login and hello admin

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <h1>iPiPi</h1>
   <% end %>
 
-  <% if user_signed_in? %>
+<!--   <% if user_signed_in? %>
     <div id="hello-admin">
       <h6>Hello Admin</h6>
     </div>
@@ -15,7 +15,7 @@
       <%= link_to "Login", new_user_session_path, class: "nav-link" %>
     </div>
   <% end %>
-
+ -->
 
 
 
