--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex justify-content-between d-flex justify-content-between align-items-center">
-  <%= link_to bathrooms_path, class: "navbar-brand" do %>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex justify-content-center shadow-lg">
+  <%= link_to bathrooms_path, class: "navbar-brand mt-auto p-0" do %>
     <h1>iPiPi</h1>
   <% end %>
 
@@ -16,12 +16,6 @@
     </div>
   <% end %>
  -->
-
-
-
-
-
-
 
 
 <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
