--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -14,11 +14,12 @@
   <div class="toilet-infos">
 
   <!-- ADD RATING SYSTEM -->
-      <i class="far fa-star" id = "star-icon"></i>
-      <i class="far fa-star" id = "star-icon"></i>
-      <i class="far fa-star" id = "star-icon"></i>
-      <i class="far fa-star" id = "star-icon"></i>
-      <i class="far fa-star" id = "star-icon"></i>
+    <span data-id="<%= @bathroom.id %>" id="bathroom-id"></span>
+    <i data-id="1" class="far fa-star" id="star-icon"></i>
+    <i data-id="2" class="far fa-star" id="star-icon"></i>
+    <i data-id="3" class="far fa-star" id="star-icon"></i>
+    <i data-id="4" class="far fa-star" id="star-icon"></i>
+    <i data-id="5" class="far fa-star" id="star-icon"></i>
     <!--  -->
   </div>
 
