Only vote the rating on clicking finish button.

--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -46,5 +46,5 @@
   </div>
   <!--------------------->
   <br>
-    <%= link_to 'FINISH',bathrooms_path %>
+    <%= link_to 'FINISH', bathrooms_path, id: "finish" %>
   </div>
