Added average rating on showpage

--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -20,10 +20,10 @@
       </div>
       <br>
       <div class="stars">
-        <% @bathroom.rating.times do %>
+        <% @bathroom.rating.round.times do %>
           <i class="fas fa-star" id = "star-icon"></i>
         <% end %>
-        <% (5 - @bathroom.rating).times do %>
+        <% (5 - @bathroom.rating.round).times do %>
           <i class="far fa-star" id = "star-icon"></i>
         <% end %>
       </div>
