--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -50,6 +50,7 @@
   justify-content: center;
   align-items: center;
   display: inline-flex;
+  letter-spacing: 0px !important;
 }
 
 .go-button a {
