--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -30,7 +30,7 @@
     <ul>
       <!-- WHATSAPP -->
       <li>
-        <a href="https://www.whatsapp.com/">
+          <a href="whatsapp://send?text=Hello%20World!">
           <i class="fab fa-whatsapp fa-2x"></i>
         </a>
       </li>
