double link on clicking on the go button is working

--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -19,14 +19,14 @@
         <br>
       </div>
       <br>
-      <div class="stars">
-        <% @bathroom.rating.times do %>
-          <i class="fas fa-star" id = "star-icon"></i>
-        <% end %>
-        <% (5 - @bathroom.rating).times do %>
-          <i class="far fa-star" id = "star-icon"></i>
-        <% end %>
-      </div>
+        <div class="stars">
+          <% @bathroom.rating.times do %>
+            <i class="fas fa-star" id = "star-icon"></i>
+          <% end %>
+          <% (5 - @bathroom.rating).times do %>
+            <i class="far fa-star" id = "star-icon"></i>
+          <% end %>
+        </div>
       <br>
     </div>
 
@@ -34,26 +34,30 @@
   <span class="hidden" id="bathroom-lat"><%= @bathroom.latitude %></span>
   <span class="hidden" id="bathroom-lng"><%= @bathroom.longitude %></span>
   <br>
-
-    <a class="btn go-button" id="google-maps" href="" target="_blank">GO</a>
+      <p class="btn go-button" id="google-maps">GO</p>
+<!--       <p class="btn go-button" id="child_2"><%= link_to "GO", bathrooms_path %></p> -->
   </div>
 </div>
 
 <script>
   // Give link to google maps with directions
+  const googleLink = document.getElementById("google-maps");
+  googleLink.addEventListener('click', (e) => {
+  e.preventDefault();
   let originLat = 0;
   let originLng = 0;
   navigator.geolocation.getCurrentPosition(position => {
     originLat = position.coords.latitude;
     originLng = position.coords.longitude;
     console.log(originLng);
-    const googleLink = document.getElementById("google-maps");
     const bathroomLat = parseFloat(document.getElementById("bathroom-lat").innerText);
     const bathroomLng = parseFloat(document.getElementById("bathroom-lng").innerText);
     const completeLink = "https://www.google.com/maps/dir/?api=1&origin=" + originLat + "," +
       originLng + "&destination=" + bathroomLat + "," + bathroomLng + "&travelmode=walking";
-    googleLink.href = completeLink;
+    window.history.back();
+    window.open(completeLink, "_blank");
   });
+});
 </script>
 
 <!--  I don't think we need to display the longitude and latitude infos to
