--- a/app/views/bathrooms/_info_window.html.erb
+++ b/app/views/bathrooms/_info_window.html.erb
@@ -1,3 +1,8 @@
 
 <p><%= bathroom.location %></p>
+<p id="distance-to">0</p>
+
+<span class="hidden" id="bathroom-lat"><%= bathroom.latitude %></span>
+<span class="hidden" id="bathroom-lng"><%= bathroom.longitude %></span>
+
 <%= link_to 'GO', bathroom_path(bathroom.id), class: 'form-actions' %>
