--- a/app/views/bathrooms/done.html.erb
+++ b/app/views/bathrooms/done.html.erb
@@ -33,7 +33,7 @@
       <!-- WHATSAPP -->
       <li>
 
-          <a href="whatsapp://send?text=Hello%20World!">
+        <a id="whatsapp-share" href="" target="_blank">
           <i class="fab fa-whatsapp fa-2x"></i>
         </a>
       </li>
