add rating code

--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -19,7 +19,14 @@
         <br>
       </div>
       <br>
-
+        <div class="stars">
+          <% @bathroom.rating.times do %>
+            <i class="fas fa-star" id = "star-icon"></i>
+          <% end %>
+          <% (5 - @bathroom.rating).times do %>
+            <i class="far fa-star" id = "star-icon"></i>
+          <% end %>
+        </div>
       <br>
     </div>
 
