fixed the rating

--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -24,7 +24,7 @@
         <% (@bathroom.rating.to_i).times do %>
           <i class="fas fa-star" id = "star-icon"></i>
         <% end %>
-        <% (5 - @bathroom.rating).to_i.times do %>
+        <% (5 - @bathroom.rating.to_i).times do %>
           <i class="far fa-star" id = "star-icon"></i>
         <% end %>
       </div>
