--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -33,3 +33,47 @@ display: inline-block;
 cursor: pointer;
 text-align: center;
 }
+
+.done-blue-btn {
+    position: absolute;
+      background-color:#5fbedc;
+    border-radius: 100px;
+    line-height: 0;
+    color: #FFFFFF;
+    width: 80%;
+    font-size: 3vh;
+    font-weight: 700;
+    padding: 11%;
+    -webkit-box-shadow: 1px 1px 7px 0px #000000;
+    -moz-box-shadow: 1px 1px 20px 0px #000000;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    bottom: 26%;
+    left: 11%;
+}
+
+.done-blue-btn:hover {
+
+}
+
+.back-icon {
+  position: absolute;
+  right: 23px;
+  }
+
+.stars {
+    position: absolute;
+    top: 21vh;
+    left: 9vh;
+}
+.share-icons {
+  position: absolute;
+      bottom: 3vh;
+    left: 13vh;
+}
+
+.share-icons a {
+  color: inherit;
+}
