--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,4 +2,25 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  background: rgb(0,152,194);
+  background: linear-gradient(297deg, rgba(0,152,194,1) 0%, rgba(183,237,252,1) 100%);
+  height: -webkit-fill-available;
+
+}
+
+.done-card {
+  position: relative;
+  margin: 12vh 3vh;
+  height: 57vh;
+  padding: 4vh;
+  border-radius: 21px;
+  background-color: white;
+-webkit-box-shadow: 0px 0px 33px -2px rgba(0,0,0,0.4);
+-moz-box-shadow: 0px 0px 33px -2px rgba(0,0,0,0.4);
+box-shadow: 0px 0px 33px -2px rgba(0,0,0,0.4);
+}
+
+.txt-done {
+  position: absolute;
+  top: 17%;
 }
